--- a/src/containers/websiteContainer/style.scss
+++ b/src/containers/websiteContainer/style.scss
@@ -26,9 +26,12 @@ h3 {
 }
 .icons {
   margin-right: 16px;
-  margin-top: 4px;
+  margin-top: 6px;
+  display: flex;
   color: #55198b;
 }
+
+
 
 .details {
   padding-top: 10px;
