--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -3,22 +3,19 @@
 .card-image {
   max-width: 100%;
   height: auto;
-  width: 100%;
+  width: 250px;
 }
 .card-title {
   color: $titleColor;
-  font-size: 22px;
+  font-size: 1.375rem;
   line-height: 24px;
   font-weight: 700;
   margin: 15px 0 0 0;
 }
 .card-subtitle {
   color: $cardSubtitle;
-  font-size: 17px;
+  font-size: 1.063rem;
   line-height: 1.5rem;
-  // margin:20px 0 ;
-  height: 130px;
-  margin-top:20px;
 }
 .certificate-card {
   background-color: $lightBackground2;
@@ -41,9 +38,11 @@
 }
 .certificate-image-div {
   position: relative;
-  height: 200px;
+  height: 250px;
   overflow: hidden;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .achievement-cards-div {
   display: grid;
@@ -55,7 +54,6 @@
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
-  margin:15px 0;
 }
 .certificate-card-footer span.certificate-tag {
   background: $buttonColor;
